[package]
name = "dmpg"
version = "0.1.0"
authors = ["Jacob Greenfield <xales@naveria.com>"]
repository = "https://github.com/xales/dmpg"
license-file = "LICENSE"
description = "PostgreSQL for BYOND's DM language"
edition = "2018"

[lib]
crate-type = ["lib", "cdylib"]

[profile.release]
opt-level = 3
lto = true

[dependencies]
postgres = "0.15"